# proyeccion-rdr

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0-jrb-test.ipynb  2.0-jrb-number-of-hospital-beds.ipynb  3.0-jrb-number-of-pavilions.ipynb  3.1-jrb-hemodynamics-pavillions.ipynb  3.2-jrb-cma-pavillions.ipynb  4.0-jrb-ambulatory-medical-boxes.ipynb  4.1-jrb-ambulatory-non-medical-boxes.ipynb  5.0-jrb-emergency-unit.ipynb  5.0-jrb-support-units-percentajes.ipynb  6.0-jrb-emergency-unit.ipynb  6.0-jrb-support-units-percentajes.ipynb
proyeccion_rdr/: 1_poblaciones_ine_fonasa.py  __init__.py  dataset.py  features.py  plots.py
proyeccion_rdr/modeling/: predict.py  train.py
proyeccion_rdr/produccion/: 01_calculo_de_casos_por_incidencias.py  1_poblaciones_ine_fonasa.py  a00_poblaciones_ine_fonasa.py  a01_calculo_de_casos_por_incidencias.py  a03_pabellon.py  a04_ambulatorio.py  a05_unidades_de_apoyo.py  calculo_de_casos_por_incidencias.py  poblaciones_ine_fonasa.py
references/: Consolidado_Metropolitano Norte_2025-05-14T19-11-03-035Z.xlsx  Consolidado_Metropolitano Norte_2025-05-14T19-12-25-285Z.xlsx  Consolidado_Metropolitano Norte_2025-05-14T19-12-34-690Z.xlsx
